--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ body {
 .btn:active{
   transform: scale(0.95);
   box-shadow: inset 6px 6px 1px black;
+  /* transition: none; */
 }
 
 .game-over {
